--- a/get-link/package.json
+++ b/get-link/package.json
@@ -21,10 +21,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.2",
+    "react-scroll": "^1.8.9",
     "typescript": "5.2.2",
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/react-scroll": "^1.8.7",
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.30",
     "tailwindcss": "^3.3.3"
